Fix text alignment in html styles
Corrected text alignment property in CSS.

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html {
   background-color: red;
  display : flex;
-  justify-content:center;
+  text-allign:center;
 }
 h1{
   background-color:yellow;
